<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <TextView
            android:id="@+id/textView6"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="100sp"
            android:gravity="center"
            android:background="#C12727"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="24sp"
            android:text="@string/_1" />
        <TextView
            android:id="@+id/textView1"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="100sp"
            android:gravity="center"
            android:background="#2196F3"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="24sp"
            android:text="@string/_2" />
        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="100sp"
            android:gravity="center"
            android:background="#E91E63"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="24sp"
            android:text="@string/_4" />
        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="100sp"
            android:gravity="center"
            android:background="#815C25"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="24sp"
            android:text="@string/_5" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textView7"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:text="@string/hor1" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>