<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication_screen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/man_hinh_dang_nhap"
            android:textStyle="bold"
            android:textSize="18sp"
            android:paddingVertical="12dp"
            android:gravity="center"
            android:background="#DAF8EF"
            android:textColor="#352F2F"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="325dp"
                app:srcCompat="@drawable/sample_user_icon"
                android:contentDescription="@string/user_image"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="16dp">

                <TextView
                    android:id="@+id/textViewEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:paddingBottom="2dp"/>

                <EditText
                    android:id="@+id/editTextTextEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/nhap_email"
                    android:autofillHints="emailAddress"
                    android:background="@drawable/edittext_shadow"
                    android:minHeight="48dp"
                    android:elevation="3dp"
                    android:padding="14dp"
                    android:layout_margin="6dp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="16dp">

                <TextView
                    android:id="@+id/textViewPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/matkhau"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:paddingBottom="2dp"/>


                <EditText
                    android:id="@+id/editTextTextPassword2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:hint="@string/nhap_email"
                    android:autofillHints="emailAddress"
                    android:background="@drawable/edittext_shadow"
                    android:minHeight="48dp"
                    android:elevation="3dp"
                    android:padding="14dp"
                    android:layout_margin="6dp"/>
            </LinearLayout>
            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dang_nhap"
                android:layout_margin="16dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:background="#F45656"
                android:shadowRadius="@integer/material_motion_duration_short_1"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>