<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="6dp"
        android:paddingVertical="4dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="53dp">

        <TextView
            android:layout_width="350dp"
            android:layout_height="500dp"
            android:background="#F22C2C"
            android:gravity="bottom|end"
            android:padding="4dp"
            android:text="@string/text_view_1"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="300dp"
            android:layout_height="450dp"
            android:background="#3566DB"
            android:gravity="bottom|end"
            android:padding="4dp"
            android:text="@string/text_view_1"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="250dp"
            android:layout_height="400dp"
            android:background="#DE24CB"
            android:gravity="bottom|end"
            android:padding="4dp"
            android:text="@string/text_view_1"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:paddingVertical="2dp"
            android:text="@string/navbar"
            android:textColor="#FFFFFF" />

    </FrameLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom|center"
        android:text="@string/footer"
        tools:layout_editor_absoluteY="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="#DB3636"
        android:textColor="@color/white"/>
</androidx.constraintlayout.widget.ConstraintLayout>