<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2"
    android:stretchColumns="*">
    <TableRow android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/_1"
            android:textSize="24sp"
            android:gravity="center"
            android:background="#D32525"
            android:textColor="@color/white"/>
        <TextView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/_2"
            android:textSize="24sp"
            android:gravity="center"
            android:background="#0F72A0"
            android:textColor="@color/white"/>
        <TextView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/_3"
            android:textSize="24sp"
            android:gravity="center"
            android:background="#1240CA"
            android:layout_span="3"
            android:textColor="@color/white"/>
        <TextView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/_4"
            android:textSize="24sp"
            android:gravity="center"
            android:background="#A418C7"
            android:textColor="@color/white"/>
    </TableRow>
    <TableRow android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="6"
            android:textSize="24sp"
            android:gravity="center"
            android:background="#0F72A0"
            android:textColor="@color/white"/>
        <TextView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="7"
            android:textSize="24sp"
            android:gravity="center"
            android:background="#1240CA"
            android:textColor="@color/white"/>
        <TextView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="8"
            android:textSize="24sp"
            android:gravity="center"
            android:background="#A418C7"
            android:layout_column="4"
            android:textColor="@color/white"/>
    </TableRow>
    <TableRow android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="23"
            android:textSize="24sp"
            android:gravity="center"
            android:background="#A61751"
            android:textColor="@color/white"/>
        <TextView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="36"
            android:textSize="24sp"
            android:gravity="center"
            android:background="#560C68"
            android:layout_span="5"
            android:textColor="@color/white"/>
    </TableRow>
    <TableRow android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="36"
            android:textSize="24sp"
            android:gravity="center"
            android:background="#E41E6E"
            android:layout_span="5"
            android:textColor="@color/white"/>
        <TextView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="36"
            android:textSize="24sp"
            android:gravity="center"
            android:background="#560C68"
            android:textColor="@color/white"/>

    </TableRow>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <CalendarView
            android:id="@+id/calendarView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </ScrollView>
</TableLayout>